# BenchmarkGPUvsIO

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  benchmark.cu  generate_data.cpp
